[package]
name = "rust_log_blaster"
version = "0.1.0"
edition = "2024"



[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
[lib]
name = "rust_log_blaster" # This will be the module name in Python
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"] 
# "cdylib" = For Python/C
# "rlib"   = For your own main.rs

[profile.release]
opt-level = 3       # "Maximize Speed" (The compiler tries hardest)
lto = true          # "Link Time Optimization" (Merges all code into one blob for CPU efficiency)
codegen-units = 1   # "Single Thread Compilation" (Slower to compile, but makes faster code)
strip = true        # "Remove Symbols" (Makes the file size tiny)
panic = "abort"     # "No Unwinding" (If it crashes, crash INSTANTLY. Saves memory.)